# jargis

./: LICENSE  README.md  pyproject.toml  sample.md  schema.sql
app/: bootstrap_db.py  cli.py  db.py  main.py  settings.py
app/routers/: draft.py  health.py  search.py  upload.py  upload_md.py
app/utils/: hashing.py  md_parse.py  normalization.py  test.py
ui/: Home.py  api_client.py
